# real_time_data

./: DOCUMENTATION.md  EXAMPLES.md  QUICK_START.md  README.md  main.py  pyproject.toml  run_fake_producer.py  start.py
csv-monitor/: csv_producer.py  fake_data_producer.py
data/: input.csv
flink/: process_job.py
streamlit/: dashboard.py
tests/: conftest.py  test_csv_producer.py  test_dashboard.py  test_fake_producer.py  test_integration.py
