[project]
name = "real-time-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.2.0",
    "pandas>=2.3.2",
    "streamlit>=1.48.1",
    "plotly>=5.15.0",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
