[project]
name = "real-time-data"
version = "0.1.0"
description = "Projeto de Atualizacao de Dashboard usando Kafka"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kafka-python>=2.0.2",
    "pandas>=2.3.2",
    "streamlit>=1.48.1",
    "plotly>=5.15.0",
    "pytest>=8.4.1",
    "watchdog>=6.0.0",
    "faker>=30.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
